Create e Update do lancamento finalizado

--- a/Projeto Controlador Financeiro Pessoal.csproj
+++ b/Projeto Controlador Financeiro Pessoal.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Projeto_Controlador_Financeiro_Pessoal</RootNamespace>
   </PropertyGroup>
